tests/ui/diagnostic_namespace/requires_path.stderr
error: cannot find attribute `diagnostic` in this scope
  --> $DIR/requires_path.rs:3:3
   |
LL | #[diagnostic]
   |   ^^^^^^^^^^

error: aborting due to previous error

